# Gravity_FundamentalAnalysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  DATABASE_SETUP.md  ISSUES_AND_TODO.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  REMAINING_WORK_PLAN.md  TEAM_PROMPT.md  TODO.md  VERSION_2.1.0_SUMMARY.md  alembic.ini  debug_test.py  pyproject.toml  pytest.ini  requirements.md
Sample_Data/: کاوه - بهای تمام شده - گزارش_های مالی _ انیگما.mhtml  کاوه - ترازنامه - گزارش_های مالی _ انیگما.mhtml  کاوه - درآمدهای عملیاتی - گزارش_های مالی _ انیگما.mhtml  کاوه - سربار - گزارش_های مالی _ انیگما.mhtml  کاوه - سود و زیان - گزارش_های مالی _ انیگما.mhtml  کاوه - عملکرد ماهانه - گزارش_های مالی _ انیگما.mhtml  کاوه - مواد اولیه - گزارش_های مالی _ انیگما.mhtml  کاوه - نسبت های مالی - گزارش_های مالی _ انیگما.mhtml  کاوه - هزینه های عمومی - گزارش_های مالی _ انیگما.mhtml  کاوه - گردش موجودی - گزارش_های مالی _ انیگما.mhtml
alembic/: env.py
app/: __init__.py  main.py
app/core/: celery_config.py  config.py  database.py  exceptions.py  redis_client.py  security.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  base.py  company.py  financial_statements.py  ml_model_weights.py  prediction_tracking.py  ratios.py  valuation_risk.py
app/schemas/: company.py  financial_statements.py  ratios.py  valuation_features.py  valuation_risk.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: API_CONTRACT.md  DATA_COLLECTION_INTEGRATION.md  EXAMPLE_KAVEH_INDUSTRY_LEARNING.md  FEATURES_COMPREHENSIVE_ANALYSIS.md  INDUSTRY_AWARE_LEARNING.md  ML_SCORING_SYSTEM.md  NEW_FEATURES_COMPLETE.md
models/: weight_optimizer.pkl
scripts/: setup_database.py
tests/: conftest.py  test_company_service.py  test_financial_statements_service.py  test_market_data_service.py  test_mispricing_detector.py  test_ml_confidence_scoring.py  test_ml_dataset_builder.py  test_ml_weight_optimizer.py  test_ratio_calculation_service.py  test_report_generator.py  test_scenario_analysis_service.py  test_scenario_tracker.py  test_sensitivity_analysis_service.py  test_stock_scoring_service.py  test_trend_analysis_service.py  test_valuation_ensemble.py  test_valuation_performance.py  test_valuation_prediction_model.py  test_valuation_scenarios_api.py  test_valuation_service.py  test_valuation_service_integration.py  test_value_drivers_service.py
(+52 files in other folders)
