[tool.poetry]
name = "fundamental-analysis"
version = "2.0.0"
description = "AI-Powered Fundamental Analysis Microservice with ML Ensemble Valuation"
authors = ["Gravity Elite Team <team@gravity-microservices.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.12.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
aioredis = "^2.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
aiokafka = "^0.8.1"
aio-pika = "^9.3.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"
yfinance = "^0.2.32"
scikit-learn = "^1.3.2"
tenacity = "^8.2.3"
slowapi = "^0.1.9"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
celery = {extras = ["redis"], version = "^5.3.4"}
flower = "^2.0.1"
torch = "^2.1.0"
reportlab = "^4.0.7"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.0"
testcontainers = "^3.7.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
bandit = "^1.7.5"
safety = "^2.3.5"
locust = "^2.17.0"
pre-commit = "^3.5.0"
hypothesis = "^6.92.1"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
